--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,5 @@
 @import "global/variables.scss";
 @import "global/mixin.scss";
 @import "global/global.scss";
+@import "blocks/container.scss";
+@import "blocks/visually-hidden.scss";
