--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,8 @@
 @import "global/global.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/page-header.scss";
+@import "blocks/navigation.scss";
+@import "blocks/subnavigation.scss";
+@import "blocks/personel.scss";
+@import "blocks/search.scss";
