--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,15 +1,34 @@
 @font-face {
-  font-family: "Roboto";
+  font-family: "Montserrat";
   font-style: normal;
-  font-weight: normal;
+  font-weight: 700;
   font-display: swap;
-  src: url("../fonts/roboto-regular.woff2") format("woff2"), url("../fonts/roboto-regular.woff") format("woff");
+  src: url("../../fonts/Montserrat-Bold.woff2") format("woff2"), url("../../fonts/Montserrat-Bold.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: "Montserrat";
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
   font-display: swap;
-  src: url("../fonts/roboto-bold.woff2") format("woff2"), url("../fonts/roboto-bold.woff") format("woff");
+  src: url("../../fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../../fonts/Montserrat-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("../../fonts/Montserrat-Regular.woff2") format("woff2"),
+    url("../../fonts/Montserrat-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url("../../fonts/Montserrat-Light.woff2") format("woff2"),
+    url("../../fonts/Montserrat-Light.woff") format("woff");
 }
