--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   font-family: "Monserat", "Tahoma", sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   color: $basic-black;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
