Разметил сетку стилизация navigation

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -14,3 +14,10 @@
   grid-column: 1/2;
   align-self: flex-end;
 }
+
+.page-header__wrapper {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  min-height: 80px;
+  padding-bottom: 30px;
+}
