--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,3 +9,5 @@ $basic-black: #000000;
 $basic-white: #ffffff;
 
 $special-blue: #f2f8fb;
+$special-marine: #06a9b3;
+$special-marine-darkest: #03484b;
