стилизовал блок logo

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -21,3 +21,12 @@
   min-height: 80px;
   padding-bottom: 30px;
 }
+
+.page-header__nav {
+  margin-top: auto;
+}
+
+.page-header__logo {
+  margin-top: auto;
+  padding-left: 260px;
+}
