--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/visually-hidden.scss";
 @import "blocks/page-header.scss";
 @import "blocks/navigation.scss";
+@import "blocks/logo.scss";
 @import "blocks/subnavigation.scss";
 @import "blocks/personel.scss";
 @import "blocks/search.scss";
