--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/page-header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/subnavigation.scss";
+@import "blocks/promo.scss";
+@import "blocks/slider.scss";
