--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,7 +1,9 @@
 /* Color */
 $basic-black: #333333;
 $basic-white: #ffffff;
+$basic-gray: #555555;
 
 $special-blue: #f2f8fb;
 $special-marine: #06a9b3;
 $special-marine-darkest: #03484b;
+$special-marine-light: #07cbd6;
