--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "global/global.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/button.scss";
 @import "blocks/page-header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/subnavigation.scss";
