--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,19 +1,23 @@
 .promo {
   display: grid;
-  grid-template-columns: 1fr 210px 1fr;
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 24px;
 }
 
 .promo__wrapper {
   &--text {
     grid-row: 1/-1;
-    grid-column: 1/3;
+    grid-column: 2/8;
+    display: grid;
+    grid-template-rows: repeat(4, min-content);
+    align-items: start;
     padding-top: 80px;
     z-index: 1;
   }
 
   &--slider {
     grid-row: 1/-1;
-    grid-column: 2/4;
+    grid-column: 6/13;
   }
 }
 
@@ -37,4 +41,8 @@
     line-height: 20px;
     color: transparentize($basic-black, 0.7);
   }
+}
+
+.promo__link {
+  justify-self: start;
 }
