стилизация page-header

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: auto 1fr;
   background-color: $special-blue;
+  padding-bottom: 100px;
 }
 
 .page-header__promo {
