стилизация promo social

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,3 +7,5 @@ $special-blue: #f2f8fb;
 $special-marine: #06a9b3;
 $special-marine-darkest: #03484b;
 $special-marine-light: #07cbd6;
+$special-gray: #cfdce3;
+$special-gray-darker: #a2bbc9;
