--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -9,8 +9,9 @@
     grid-row: 1/-1;
     grid-column: 2/8;
     display: grid;
-    grid-template-rows: repeat(4, min-content);
+    grid-template-rows: repeat(4, min-content) 1fr;
     align-items: start;
+    height: 100%;
     padding-top: 80px;
     z-index: 1;
   }
