--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,6 +4,7 @@ $basic-white: #ffffff;
 $basic-gray: #555555;
 
 $special-blue: #f2f8fb;
+$special-blue-dark: #eaf2f6;
 $special-marine: #06a9b3;
 $special-marine-darkest: #03484b;
 $special-marine-light: #07cbd6;
