--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,9 +7,12 @@
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/button.scss";
+@import "blocks/title.scss";
 @import "blocks/page-header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/subnavigation.scss";
 @import "blocks/promo.scss";
 @import "blocks/slider.scss";
 @import "blocks/social.scss";
+@import "blocks/page-main.scss";
+@import "blocks/place.scss";
