--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/visually-hidden.scss";
 @import "blocks/button.scss";
 @import "blocks/title.scss";
+@import "blocks/subtitle.scss";
 @import "blocks/page-header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/subnavigation.scss";
