Начало разметки блок catalog

--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -5,3 +5,9 @@
 .page-main__place {
   padding: 100px 0;
 }
+
+.page-main__catalog {
+  padding-top: 100px;
+  padding-bottom: 140px;
+  background-color: $special-blue;
+}
