--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -6,9 +6,12 @@
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
   min-width: 320px;
   min-height: 100%;
   margin: 0;
@@ -17,8 +20,6 @@ body {
   font-style: normal;
   font-weight: 400;
   color: $basic-black;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
 }
 
 img {
