--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -70,6 +70,7 @@
 }
 
 .catalog__description {
+  margin: 0;
   margin-top: auto;
   padding-top: 16px;
   border-top: 2px solid $special-blue-dark;
