Стилизация блок form request

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,5 @@
 @import "blocks/place.scss";
 @import "blocks/catalog.scss";
 @import "blocks/properties.scss";
+@import "blocks/request.scss";
+@import "blocks/form.scss";
