--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,15 +1,16 @@
 .button {
   display: inline-block;
-  justify-content: center;
-  align-items: center;
   padding: 16px 32px;
+  font-family: "Montserrat", "Tahoma", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: $basic-white;
   background-color: $special-marine;
+  border: none;
   transition: 0.2s;
   outline: none;
+  cursor: pointer;
 
   &:hover,
   &:focus {
