Стилизация правка разметки блок form

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,3 +10,4 @@ $special-marine-darkest: #03484b;
 $special-marine-light: #07cbd6;
 $special-gray: #cfdce3;
 $special-gray-darker: #a2bbc9;
+$special-red: #ff8282;
