--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -38,7 +38,17 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 20px;
-  border: 1px solid $special-gra;
+  border: 1px solid $special-gray;
+  outline: none;
+
+  &--status {
+    appearance: none;
+    background-image: url("../../img/icon-select.svg");
+    background-repeat: no-repeat;
+    background-position: 114px;
+    color: transparentize($basic-black, 0.7);
+    cursor: pointer;
+  }
 
   &::placeholder {
     font-family: "Montserrat", "Tahoma", sans-serif;
@@ -48,9 +58,28 @@
     color: transparentize($basic-black, 0.7);
   }
 
-  .form__title {
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 18px;
+  &:focus,
+  &:hover,
+  &:active {
+    box-shadow: inset 0 0 1px 1px $special-marine;
+    border: 1px solid $special-marine;
   }
+
+  &--invalid,
+  &:invalid {
+    box-shadow: inset 0 0 1px 1px $special-red;
+    border: 1px solid $special-red;
+  }
+}
+
+.form__title {
+  padding-bottom: 5px;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.form__button {
+  align-self: end;
+  justify-self: start;
 }
