--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -23,6 +23,12 @@
     grid-template-columns: auto;
     row-gap: 20px;
   }
+
+  &--consent {
+    position: relative;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 24px;
+  }
 }
 
 .form__inner {
@@ -61,13 +67,13 @@
   &:focus,
   &:hover,
   &:active {
-    box-shadow: inset 0 0 1px 1px $special-marine;
+    box-shadow: inset 0 0 0 1px $special-marine;
     border: 1px solid $special-marine;
   }
 
   &--invalid,
   &:invalid {
-    box-shadow: inset 0 0 1px 1px $special-red;
+    box-shadow: inset 0 0 0 1px $special-red;
     border: 1px solid $special-red;
   }
 }
@@ -77,9 +83,45 @@
   font-weight: 300;
   font-size: 12px;
   line-height: 18px;
+
+  &--consent {
+    display: block;
+    padding-left: 30px;
+  }
 }
 
 .form__button {
   align-self: end;
   justify-self: start;
+}
+
+.form__checkbox {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border: 1px solid $special-gray;
+  cursor: pointer;
+}
+
+.form__check {
+  &:hover,
+  &:focus {
+    & + .form__checkbox {
+      border: 1px solid $special-gray-darker;
+    }
+  }
+
+  &:active {
+    & + .form__checkbox {
+      border: 1px solid transparentize($special-gray-darker, 0.5);
+    }
+  }
+
+  &:checked {
+    & + .form__checkbox {
+      padding: 2px;
+      background-color: $special-marine;
+      background-clip: content-box;
+    }
+  }
 }
