--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,5 @@
 @import "blocks/properties.scss";
 @import "blocks/request.scss";
 @import "blocks/form.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/copyright.scss";
