Стилизовал чекбоксы блок form

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -119,9 +119,8 @@
 
   &:checked {
     & + .form__checkbox {
-      padding: 2px;
       background-color: $special-marine;
-      background-clip: content-box;
+      box-shadow: inset 0 0 0 3px $basic-white;
     }
   }
 }
