--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  position: relative;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   min-width: 320px;
