--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/subnavigation.scss";
+@import "blocks/search.scss";
 @import "blocks/promo.scss";
 @import "blocks/slider.scss";
 @import "blocks/social.scss";
