--- a/source/sass/blocks/request.scss
+++ b/source/sass/blocks/request.scss
@@ -18,9 +18,11 @@
 .request__subtitle {
   grid-column: 2/6;
   padding-top: 60px;
-  padding-bottom: 24px;
+  padding-bottom: 23px;
+  padding-left: 4px;
 }
 
 .request__form {
   grid-column: 2/6;
+  padding-left: 4px;
 }
