--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -25,6 +25,7 @@
   height: 64px;
   margin: 0;
   padding: 0;
+  padding-top: 3px;
   color: $special-marine;
   background-color: $basic-white;
   border: none;
