--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -53,7 +53,7 @@
   &:checked {
     & + .form__checkbox {
       background-color: $special-marine;
-      box-shadow: inset 0 0 0 3px $basic-white;
+      box-shadow: inset 0 0 0 2px $basic-white;
     }
   }
 }
@@ -119,12 +119,20 @@
 .form__button {
   align-self: end;
   justify-self: start;
+  margin-top: 12px;
+  line-height: 12px;
 }
 
 .form__checkbox {
   position: absolute;
+  left: -2px;
   width: 18px;
   height: 18px;
   border: 1px solid $special-gray;
   cursor: pointer;
+}
+
+.form__name {
+  position: relative;
+  padding-top: 8px;
 }
