--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -3,11 +3,11 @@
 }
 
 .page-main__place {
-  padding: 100px 0;
+  padding: 100px 30px;
 }
 
 .page-main__catalog {
   padding-top: 100px;
-  padding-bottom: 140px;
+  padding-bottom: 138px;
   background-color: $special-blue;
 }
