Правка по критериям Разное

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -68,6 +68,7 @@
   line-height: 20px;
   border: 1px solid $special-gray;
   outline: none;
+  appearance: none;
 
   &--status {
     appearance: none;
