--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -24,6 +24,8 @@
 
 .catalog__item {
   grid-column: span 3;
+  display: grid;
+  grid-template-rows: auto 1fr;
   border: 1px solid $special-gray;
   background-color: $basic-white;
 
@@ -31,6 +33,7 @@
     grid-column: 3 / span 8;
     display: grid;
     grid-template-columns: auto 1fr;
+    grid-row: auto;
     column-gap: 24px;
   }
 }
