--- a/source/sass/blocks/page-up.scss
+++ b/source/sass/blocks/page-up.scss
@@ -1,8 +1,8 @@
 .page-up {
   position: fixed;
   display: none;
-  right: 200px;
-  bottom: 200px;
+  right: 50px;
+  bottom: 100px;
   justify-content: center;
   align-items: center;
   width: 50px;
@@ -10,6 +10,10 @@
   border: 2px solid $special-marine;
   border-radius: 50%;
   z-index: 100;
+}
+
+.page-up--active {
+  display: flex;
 }
 
 .page-up__btn {
